# opendeck-ajazz-n1

./: .gitignore  40-opendeck-ajazz-n1.rules  AGENTS.md  Cargo.toml  README.md  justfile  manifest.json
.github/workflows/: build.yml
.gitold/: COMMIT_EDITMSG  config  index  packed-refs
.gitold/logs/refs/heads/: main
.gitold/logs/refs/remotes/origin/: HEAD  hsv293sv3  main  msd-one  womier-d15
.gitold/logs/refs/remotes/upstream/: HEAD  womier-d15
.gitold/objects/pack/: pack-f4365a8c035e7e4d351c67146f338ee9dd4586b8.idx  pack-f4365a8c035e7e4d351c67146f338ee9dd4586b8.pack  pack-f4365a8c035e7e4d351c67146f338ee9dd4586b8.rev
.gitold/refs/remotes/origin/: main  womier-d15
.gitold/refs/remotes/upstream/: hsv293sv3  main  msd-one
scripts/: volume.sh
src/: device.rs  inputs.rs  main.rs  mappings.rs  watcher.rs
