[package]
name = "opendeck-ajazz-n1"
version = "1.0.4"
edition = "2024"

[dependencies]
async-hid = { version = "0.4.4", default-features = false, features = ["tokio"] }
data-url = "0.3.1"
futures-lite = "2.6.0"
image = { version = "0.25.6", default-features = false, features = ["bmp", "jpeg"] }
log = "0.4.27"
mirajazz = "0.9.0"
openaction = "2.5.0"
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
